# F1-Ml-Prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  FINAL_SUMMARY_20251230.md  MODEL_VALIDATION_REPORT.md  Makefile  PHASE1_COMPLETE.md  SESSION_SUMMARY_20251230.md  USAGE.md  cleanup_legacy.sh  main.py  pyproject.toml  requirements.txt  train_v1_2_0_fast.py
data/: README.md
docs/: PROJECT_CLEANUP_GUIDE.md  PROJECT_STRUCTURE_AUDIT.md
docs/history/: CODE_REVIEW_PHASE3.md  REVIEW_ML_INTEGRATION.md  SESSION_CONTINUATION_20251230.md
models/: README.md
models/v1.1.0/: feature_importances_classifier.csv  feature_importances_position.csv  features.json  metrics.json
notebooks/: README.md  explore_dataset.ipynb  train_production_model.ipynb
scripts/training/: train_v1_2_0.py
scripts/utilities/: check_historical_data.py  cleanup_project_structure.sh  test_v1_2_0_creation.py
src/: arcade_replay.py  config.py  f1_data.py  logging_config.py  ui_components.py
src/f1_data/: __init__.py  cache.py  loaders.py  processors.py
src/interfaces/: qualifying.py  race_replay.py  selector.py
src/lib/: time.py
src/ml/: __init__.py  collect_historical_data.py  data_collection.py  features.py  prediction.py  validation.py
src/ui_components/: __init__.py  base.py  controls.py  driver_info.py  lap_time_leaderboard.py  leaderboard.py  legend.py  ml_predictions_panel.py  progress_bar.py  qualifying_selector.py  team_colors.py  track_utils.py  utils.py  weather.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: test_config.py  test_ml_encoding.py  test_ml_enhanced_features.py  test_ml_validation.py
