# ═══════════════════════════════════════════════════════════════
# F1 Race Replay - Project Configuration
# ═══════════════════════════════════════════════════════════════

[project]
name = "f1-race-replay"
version = "0.1.0"
description = "F1 Race Replay - Visualization and ML prediction for Formula 1 races"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tom Shaw", email = "contact@tomshaw.dev" }
]
keywords = [
    "f1",
    "formula1",
    "visualization",
    "machine-learning",
    "race-replay",
    "telemetry",
    "fastf1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Core dependencies (pinned with minimum versions)
# Note: pyglet version is managed by arcade (it requires specific dev versions)
dependencies = [
    "fastf1>=3.0.0,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "numpy>=1.24.0,<2.0.0",
    "arcade>=3.0.0,<4.0.0",  # Using 3.x (stable version, 2.6.x requires pyglet pre-releases)
    "pyglet>=2.0.0,<3.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "imbalanced-learn>=0.11.0,<1.0.0",
    "xgboost>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",  # Data validation
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ipykernel>=6.25.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "nbstripout>=0.6.0",
]

# Data versioning
data = [
    "dvc>=3.0.0",
    "dvc-s3>=3.0.0",  # Or dvc-gdrive, dvc-azure, etc.
]

# Type stubs
types = [
    "pandas-stubs>=2.0.0",
    "types-seaborn>=0.12.0",
]

# All optional dependencies combined
all = [
    "f1-race-replay[dev,data,types]",
]

[project.scripts]
f1-replay = "main:main"

[project.urls]
Homepage = "https://github.com/IAmTomShaw/f1-race-replay"
Repository = "https://github.com/IAmTomShaw/f1-race-replay"
Issues = "https://github.com/IAmTomShaw/f1-race-replay/issues"

# ═══════════════════════════════════════════════════════════════
# Build System
# ═══════════════════════════════════════════════════════════════
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ═══════════════════════════════════════════════════════════════
# Ruff - Linting & Formatting
# ═══════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented code)
    "PL",    # Pylint
    "RUF",   # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]  # Allow assert and magic numbers in tests
"**/__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ═══════════════════════════════════════════════════════════════
# MyPy - Type Checking
# ═══════════════════════════════════════════════════════════════
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
# Empezamos suave - no requerimos tipos en todo aún
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

# Ignorar imports de librerías sin tipos
[[tool.mypy.overrides]]
module = [
    "fastf1.*",
    "arcade.*",
    "pyglet.*",
    "sklearn.*",
    "xgboost.*",
    "imblearn.*",
]
ignore_missing_imports = true

# ═══════════════════════════════════════════════════════════════
# Pytest - Testing
# ═══════════════════════════════════════════════════════════════
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",           # Show extra test summary
    "-q",            # Quiet mode
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=2",  # Empezamos bajo, incrementaremos gradualmente (objetivo: 80%)
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "error",  # Treat warnings as errors
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ═══════════════════════════════════════════════════════════════
# Coverage
# ═══════════════════════════════════════════════════════════════
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# ═══════════════════════════════════════════════════════════════
# Hatch - Build Backend Configuration
# ═══════════════════════════════════════════════════════════════
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]
